opentreemap/treemap/css/sass/partials/_subheader.scss
// Partial: Advanced Search

.subhead {
    position: absolute;
    z-index: 99;
    width: 100%;
    border-top: 1px solid lighten($primary-color, 35%);
    -ms-transform: translateY(-100%);
    -moz-transform: translateY(-100%);
    -webkit-transform: translateY(-100%);
    transform: translateY(-100%);
    transition: all 400ms cubic-bezier(0, 0, 0.1, 1);
    margin-top: 45px;
    box-shadow: 0 6px 0 rgba(0,0,0,.15);

    &.expanded {
        -ms-transform: translateY(0);
        -moz-transform: translateY(0);
        -webkit-transform: translateY(0);
        transform: translateY(0);
        margin-top: 0;
    }

    > .advanced-search {
        padding: 20px;
        background: lighten($primary-color, 45%);

        form {
            margin: 0 0 10px;
        }

        .search-range {
            margin-bottom: 5px;
            clear: both;

            > label {
                display: inline-block;
                width: 120px;
                font-size: 1.4rem;
                font-weight: 700;
                position: relative;
            }
            
            @media #{$screen-lg} {
                label {
                    top: -3px;
                }
            }
            @media #{$screen-ltlg} {
                label {
                    width: auto;
                    display: block;
                }
            }
            @media #{$screen-sm} {
                .input-append {
                    input[type="text"] {
                        width: 55px;
                    }
                }
                input[type="text"] {
                    width: 92px;
    
                    & + span {
                        margin: 0 10px;
                        font-size: 1.4rem;
                    }
                }
            }
        }
        .input-append {
            input[type="text"] {
                width: 82px;

                & + span {
                    margin: 0 0 0 -1px;
                }
            }

            & + span {
                margin: 0 10px;
                font-size: 1.4rem;
            }
        }
        input[type="text"] {
            width: 119px;

            & + span {
                margin: 0 10px;
                font-size: 1.4rem;
            }
        }

        .slider-row {
            margin-bottom: 8px;

            &.disabled {
                opacity: 0.4;
            }

            span {
                font-size: 1.0rem;
                font-weight: 500;
                opacity: 0.5;
                min-width: 20px;
                display: inline-block;

                &.slider-label {
                    width: 120px;
                    font-weight: 600;
                    font-size: 1.3rem;
                    opacity: 1;
                    margin: 0;
                    display: inline-block;

                    & + span {
                        text-align: right;
                        margin-right: 16px;
                    }
                }
            }
            .slider {

                & + span {
                    margin-left: 16px;
                }
                .slider-selection {
                    background: lighten($secondary-color, 15%);
                }
                .slider-handle {
                    background: $secondary-color;
                    margin-left: -6px;
                    margin-top: -3px;
                    width: 16px;
                    height: 16px;
                    opacity: 1;

                    &:hover {
                        background: darken($secondary-color, 10%);
                    }
                }
                .tooltip {
                    display: none;

                    &.in {
                        display: block;
                    }
                }
            }
        }

        @include checkboxes;
    }
    > .udfc-search {
        min-height: 50px;
        padding: 0 8px;
        background: lighten($primary-color, 15%);

        &.disabled {
            span {
                opacity: 0.4;
            }
            .udfc-label,
            .udfc-selector {
                opacity: 0.4;
                cursor: default;
                background: $primary-color;

                &:hover {
                    background: $primary-color;

                    &:after {
                        opacity: 0.5;
                    }
                }
            }
        }

        span {
            padding: 14px 15px;
            color: white;
            font-weight: 300;
            display: inline-block;
        }
        .udfc-label {
            position: relative;
            display: inline-block;
            margin: 0;
            font-size: 1.6rem;
            line-height: 2rem;

            &:after {
                content: '\25BC';
                font-size: 1rem;
                margin-left: 12px;
                position: absolute;
                opacity: 0.5;
                pointer-events: none;
                color: white;
                right: 10px;
                top: 12px;
            }
            &:hover {
                select {
                    background: darken($primary-color, 5%);
                    cursor: pointer;
                }

                &:after {
                    opacity: 1;
                }
            }

            select {
                background: $primary-color;
                display: inline-block;
                margin: 0;
                padding: 15px 33px 14px 15px;
                font-weight: 500;
                -webkit-appearance: none;
                -moz-appearance: none;
                appearance: none;
                cursor: pointer;
                border: none;
                outline: none;
                color: white;
                height: auto;
                line-height: 2.0rem;
                font-size: 1.6rem;
                border-radius: 0;
                margin-top: -3px;
                min-width: 100px;
                width: auto;
                max-width: 220px;
                
                option {
                    color: black;
                }
            }
        }
        input.udfc-selector {
            background: $primary-color;
            display: inline-block;
            margin: 0;
            padding: 15px 15px 14px 15px;
            font-weight: 500;
            -webkit-appearance: none;
            -moz-appearance: none;
            appearance: none;
            cursor: pointer;
            border: none;
            outline: none;
            color: white;
            height: auto;
            line-height: 2.0rem;
            font-size: 1.6rem;
            border-radius: 0;
            margin-top: -3px;
            width: 110px;

            &:hover {
                background: darken($primary-color, 5%);
                cursor: pointer;

                &:after {
                    opacity: 1;
                }
            }
            &:after {
                content: '\25BC';
                font-size: 1.0rem;
                margin-left: 12px;
                position: absolute;
                opacity: 0.5;
                pointer-events: none;
                color: white;
                right: 10px;
                top: 12px;
            }
        }
    }
    > .stats-bar {
        padding: 11px 15px 10px;
        border-left: 8px solid $primary-color;
        font-size: 1.6rem;
        font-weight: 300;
        background: lighten($primary-color, 45%);
        height: 24px;
        position: relative;
        z-index: 9;
        color: darken($primary-color, 25%);

        span {
            font-weight: bold;
        }

        .exportBtn {
            margin-left: 10px;
            margin-top: -2px;
        }

        .addBtn {
            float: right;
            margin-top: -3px;
            margin-left: 7px;

            i {
                position: relative;
                left: -4px;
                top: 2px;
            }
        }
    }
}

